# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

# This file sets defaults for the different GN/Ninja target types in a way that
# is suitable for upstream Pigweed development. Projects using Pigweed are
# welcome to import a modified version of this in their BUILDCONFIG.gn, or may
# choose not to import it altogether.

# Default configs to use for all binary build targets.
_default_common_binary_configs = [
  "$dir_pw_build:reduced_size",
  "$dir_pw_build:strict_warnings",
]

set_defaults("executable") {
  configs = _default_common_binary_configs
}

set_defaults("static_library") {
  configs = _default_common_binary_configs
}

set_defaults("shared_library") {
  configs = _default_common_binary_configs
}

set_defaults("source_set") {
  configs = _default_common_binary_configs
}
